# perf_runner

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: BenchmarkRunner.md  api_types.md  cli_commands.md  intoduction.md
examples/: benchmark_list.py  benchmark_string.py
perf_runner/: __init__.py  __main__.py  api_types.py  bm_runner.py  utils.py
